--- a/index.html
+++ b/index.html
@@ -5,12 +5,24 @@
     <title>Shopping List</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
+    <link href='http://fonts.googleapis.com/css?family=Pathway+Gothic+One' rel='stylesheet' type='text/css'>
 </head>
 <body>
-    <div class="main-container">
+    <header>
         <h1>Shopping List</h1>
+        <h3>Please enter your items below</h3>
+    </header>
+    <div class="main-container">
+        <form action="">
+            <input type="text" id="input-box" required="true">
+            <input type="button" id="submit-button" value="submit">
+        </form>
+        <ul id="list-container">
+            <li>Apple</li>
+            <li style="text-decoration: line-through;">Sauce</li>
+        </ul>
     </div>
     <script src="js/jquery-1.9.1.min.js"></script>
-    <script scc="js/app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
