--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
     <div class="main-container">
         <form action="">
             <input type="text" id="input-box" required="true">
-            <input type="button" id="submit-button" value="submit">
+            <input type="button" id="submit-button" value="+">
+            <input type="button" id="remove-button" value="-">
         </form>
-        <ul id="list-container">
-            <li>Apple</li>
-            <li style="text-decoration: line-through;">Sauce</li>
+        <ul id="list-container"> 
         </ul>
     </div>
     <script src="js/jquery-1.9.1.min.js"></script>
